--- a/project/res/layout/screen.xml
+++ b/project/res/layout/screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:screenView="http://schemas.android.com/apk/res/name.osher.gil.minivmac"
+    xmlns:ScreenView="http://schemas.android.com/apk/res/name.osher.gil.minivmac"
     xmlns:Keyboard="http://schemas.android.com/apk/res/name.osher.gil.minivmac">
     <name.osher.gil.minivmac.ScreenView
     	android:id="@+id/screen"
