--- a/project/res/layout/screen.xml
+++ b/project/res/layout/screen.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ScreenView="http://schemas.android.com/apk/res/name.osher.gil.minivmac"
-    xmlns:Keyboard="http://schemas.android.com/apk/res/name.osher.gil.minivmac">
-    <name.osher.gil.minivmac.ScreenView
+    xmlns:ScreenView="http://schemas.android.com/apk/res/name.osher.gil.minivmac.ii"
+    xmlns:Keyboard="http://schemas.android.com/apk/res/name.osher.gil.minivmac.ii">
+    <name.osher.gil.minivmac.ii.ScreenView
     	android:id="@+id/screen"
 		android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
         
-    <name.osher.gil.minivmac.Keyboard
+    <name.osher.gil.minivmac.ii.Keyboard
     	android:id="@+id/keyboard"
     	android:layout_width="fill_parent"
         android:layout_height="wrap_content"
