--- a/project/res/layout/keyboard.xml
+++ b/project/res/layout/keyboard.xml
@@ -3,47 +3,47 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:key="http://schemas.android.com/apk/res/name.osher.gil.minivmac.ii">
     <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="12" android:text="Q"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="13" android:text="W"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="14" android:text="E"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="15" android:text="R"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="17" android:text="T"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="16" android:text="Y"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="32" android:text="U"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="34" android:text="I"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="31" android:text="O"/>
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="35" android:text="P"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="12" key:text="Q"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="13" key:text="W"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="14" key:text="E"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="15" key:text="R"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="17" key:text="T"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="16" key:text="Y"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="32" key:text="U"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="34" key:text="I"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="31" key:text="O"/>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="35" key:text="P"/>
     </LinearLayout>
     <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="0" android:text="A"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="1" android:text="S"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="2" android:text="D"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="3" android:text="F"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="5" android:text="G"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="4" android:text="H"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="38" android:text="J"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="40" android:text="K"/>
-     	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="37" android:text="L"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="0" key:text="A"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="1" key:text="S"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="2" key:text="D"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="3" key:text="F"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="5" key:text="G"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="4" key:text="H"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="38" key:text="J"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="40" key:text="K"/>
+     	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="37" key:text="L"/>
     </LinearLayout>
     <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="56" key:upImage="@drawable/kb_shift_up" key:downImage="@drawable/kb_shift_down" key:holdImage="@drawable/kb_shift_hold" />
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="6" android:text="Z"/>
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="7" android:text="X"/>
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="8" android:text="C"/>
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="9" android:text="V"/>
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="11" android:text="B"/>
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="45" android:text="N"/>
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="46" android:text="M"/>
-    	 <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="51" key:upImage="@drawable/kb_backspace_up" key:downImage="@drawable/kb_backspace_down"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="56" key:upImage="@drawable/kb_shift_up" key:downImage="@drawable/kb_shift_down" key:holdImage="@drawable/kb_shift_hold" />
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="6" key:text="Z"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="7" key:text="X"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="8" key:text="C"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="9" key:text="V"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="11" key:text="B"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="45" key:text="N"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="46" key:text="M"/>
+    	 <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="51" key:upImage="@drawable/kb_backspace_up" key:downImage="@drawable/kb_backspace_down"/>
     </LinearLayout>
     <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
-    	<Button android:id="@+id/btnHide" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/toggle_button" />
-    	<name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="58" key:upImage="@drawable/kb_option_up" key:downImage="@drawable/kb_option_down" key:holdImage="@drawable/kb_option_hold" />
-        <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="55" key:upImage="@drawable/kb_command_up" key:downImage="@drawable/kb_command_down" key:holdImage="@drawable/kb_command_hold" />
-        <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="49" key:upImage="@drawable/kb_space_up" key:downImage="@drawable/kb_space_down"/>
-        <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="53" key:upImage="@drawable/kb_escape_up" key:downImage="@drawable/kb_escape_down"/>
-        <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="48" key:upImage="@drawable/kb_tab_up" key:downImage="@drawable/kb_tab_down"/>
-        <name.osher.gil.minivmac.ii.Key android:layout_width="wrap_content" android:layout_height="wrap_content" key:scanCode="36" key:upImage="@drawable/kb_return_up" key:downImage="@drawable/kb_return_down" />
+    	<LinearLayout android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1"><Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btnHide" android:background="@drawable/toggle_button" /></LinearLayout>
+    	<name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="58" key:upImage="@drawable/kb_option_up" key:downImage="@drawable/kb_option_down" key:holdImage="@drawable/kb_option_hold" />
+        <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="55" key:upImage="@drawable/kb_command_up" key:downImage="@drawable/kb_command_down" key:holdImage="@drawable/kb_command_hold" />
+        <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="49" key:upImage="@drawable/kb_space_up" key:downImage="@drawable/kb_space_down"/>
+        <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="53" key:upImage="@drawable/kb_escape_up" key:downImage="@drawable/kb_escape_down"/>
+        <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="48" key:upImage="@drawable/kb_tab_up" key:downImage="@drawable/kb_tab_down"/>
+        <name.osher.gil.minivmac.ii.Key android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" key:scanCode="36" key:upImage="@drawable/kb_return_up" key:downImage="@drawable/kb_return_down" />
         
     </LinearLayout>
 </merge>
