Refactor - Make everything less static

--- a/minivmac/src/main/res/layout/activity_mini_vmac.xml
+++ b/minivmac/src/main/res/layout/activity_mini_vmac.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MiniVMac" >
+    tools:context=".MiniVMac"
+    android:id="@+id/main_layout" >
 
     <include layout="@layout/screen"/>
 </FrameLayout>
