Fix layout warnings

--- a/minivmac/src/main/res/layout/screen.xml
+++ b/minivmac/src/main/res/layout/screen.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent">
     <name.osher.gil.minivmac.ScreenView
         android:id="@+id/screen"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"/>
 
     <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/background_material_dark"
+        android:background="@color/screen_background"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:visibility="gone" />
