--- a/minivmac/src/main/res/values/colors.xml
+++ b/minivmac/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
   <color name="background_material_light">#c1d5e0</color>
   <color name="primary_dark_material_light">#62757f</color>
   <color name="primary_text">#212121</color>
+  <color name="screen_background">#ff303030</color>
 </resources>
