--- a/minivmac/src/main/res/menu/minivmac_actions.xml
+++ b/minivmac/src/main/res/menu/minivmac_actions.xml
@@ -13,7 +13,7 @@
             <item android:id="@+id/action_create_disk"
                 android:icon="@drawable/disk_floppy_color"
                 android:title="@string/menu_create_disk" />
-            <item android:id="@+id/action_select_disk"
+            <item android:id="@+id/action_import_file"
                   android:icon="@drawable/disk_floppy_color"
                   android:title="@string/menu_select_disk" />
         </menu>
