--- a/minivmac/src/main/res/xml/provider_paths.xml
+++ b/minivmac/src/main/res/xml/provider_paths.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <root-path
-        name="root"
-        path="." />
+    <root-path name="root" path="." />
+    <external-cache-path name="cache" path="." />
+    <external-files-path name="disks" path="disks" />
+    <external-files-path name="downloads" path="downloads" />
 </paths>
