--- a/minivmac/src/main/res/values/arrays.xml
+++ b/minivmac/src/main/res/values/arrays.xml
@@ -18,4 +18,14 @@
         <item>5</item>
         <item>255</item>
     </string-array>
+    <string-array name="kbd_entries">
+        <item>@string/prefs_kbd_us</item>
+        <item>@string/prefs_kbd_es</item>
+        <item>@string/prefs_kbd_he</item>
+    </string-array>
+    <string-array name="kbd_values">
+        <item>us</item>
+        <item>es</item>
+        <item>he</item>
+    </string-array>
 </resources>
